--- a/app/src/cobrand/res/values-es/strings.xml
+++ b/app/src/cobrand/res/values-es/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Co-brand</string>
+  <string name="app_name">OPPO</string>
   <string name="reviewappview_highlighted_reviews_explanation_4">Ser un usuario de %1$s durante más de 3 meses</string>
   <string name="update_self_msg">Hay una nueva versión de %1$s disponible\n¿Quieres actualizarla?</string>
   <string name="hello_follow_me_on_aptoide">¡Hola! Sígueme en %1$s</string>
