--- a/app/src/cobrand/res/values-hu/strings.xml
+++ b/app/src/cobrand/res/values-hu/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Co-brand</string>
+  <string name="app_name">OPPO</string>
   <string name="reviewappview_highlighted_reviews_explanation_4">Legyél %1$s felhasználó több mint 3 hónapon át</string>
   <string name="update_self_msg">A(z) %1$s új verziója elérhető\nSzeretné frissíteni?</string>
   <string name="hello_follow_me_on_aptoide">Hello% Kövess engem itt: %1$s</string>
