--- a/app/src/cobrand/res/values-mr/strings.xml
+++ b/app/src/cobrand/res/values-mr/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Co-brand</string>
+  <string name="app_name">OPPO</string>
   <string name="reviewappview_highlighted_reviews_explanation_4">%1$s वापरकर्ते ३ महिन्यांपेक्षा जास्त काळ असा</string>
   <string name="update_self_msg">%1$s ची नवीन आवृत्ती उपलब्ध आहे\nआपल्याला अपडेट करायचे आहे का?</string>
   <string name="hello_follow_me_on_aptoide">हॅलो! मला %1$s फॉलो करा</string>
