--- a/app/src/cobrand/res/values-ms/strings.xml
+++ b/app/src/cobrand/res/values-ms/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Co-brand</string>
+  <string name="app_name">OPPO</string>
   <string name="reviewappview_highlighted_reviews_explanation_4">Jadi pengguna %1$s selama lebih 3 bulan</string>
   <string name="update_self_msg">Terdapat versi %1$s yang baru\nAnda mahu kemas kini?</string>
   <string name="hello_follow_me_on_aptoide">Helo! Ikuti saya di %1$s</string>
