--- a/app/src/cobrand/res/values-pa/strings.xml
+++ b/app/src/cobrand/res/values-pa/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Co-brand</string>
+  <string name="app_name">OPPO</string>
   <string name="reviewappview_highlighted_reviews_explanation_4">ਤਿੰਨ ਮਹੀਨਿਆਂ ਤੋਂ ਵੱਧ ਲਈ %1$s ਦੇ ਉਪਭੋਗਤਾ ਰਹੋ</string>
   <string name="update_self_msg">%1$s ਦਾ ਨਵਾਂ ਵਰਜਨ ਉਪਲੱਬਧ ਹੈ\nਕੀ ਤੁਸੀ ਅੱਪਡੇਟ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ?</string>
   <string name="hello_follow_me_on_aptoide">ਸਤ ਸ੍ਰੀ ਅਕਾਲ! ਮੈਨੂੰ %1$s ਤੇ ਫੋਲੋ ਕਰੋ</string>
