--- a/app/src/cobrand/res/values-sr/strings.xml
+++ b/app/src/cobrand/res/values-sr/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Co-brand</string>
+  <string name="app_name">OPPO</string>
   <string name="reviewappview_highlighted_reviews_explanation_4">Budite %1$s korisnik duže od 3 meseca</string>
   <string name="update_self_msg">Postoji nova %1$s verzija.\nDa li želite da ažurirate?</string>
   <string name="hello_follow_me_on_aptoide">Zdravo! Prati me u prodavnici %1$s</string>
