--- a/app/src/cobrand/res/values-uk/strings.xml
+++ b/app/src/cobrand/res/values-uk/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Co-brand</string>
+  <string name="app_name">OPPO</string>
   <string name="reviewappview_highlighted_reviews_explanation_4">Бути користувачем %1 $ s більше 3 місяців</string>
   <string name="update_self_msg">Доступна нова версія %1$s \nБажаєте оновити?</string>
   <string name="hello_follow_me_on_aptoide">Вітаю! Читайте мене на %1$s</string>
