--- a/app/src/cobrand/res/values-el/strings.xml
+++ b/app/src/cobrand/res/values-el/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Co-brand</string>
+  <string name="app_name">OPPO</string>
   <string name="reviewappview_highlighted_reviews_explanation_4">Πρέπει να είστε χρήστης του %1$s για περισσότερους από 3 μήνες</string>
   <string name="update_self_msg">Υπάρχει νέα διαθέσιμη έκδοση του %1$s\nΘέλετε να κάνετε ενημέρωση;</string>
   <string name="hello_follow_me_on_aptoide">Γεια σας! Ακολουθήστε με στο %1$s</string>
