--- a/app/src/cobrand/res/values-in/strings.xml
+++ b/app/src/cobrand/res/values-in/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Co-brand</string>
+  <string name="app_name">OPPO</string>
   <string name="reviewappview_highlighted_reviews_explanation_4">Jadilah pengguna %1$s selama lebih dari 3 bulan</string>
   <string name="update_self_msg">Tersedia versi baru dari %1$s\nApakah Anda ingin memperbaruinya?</string>
   <string name="hello_follow_me_on_aptoide">Halo! Ikuti saya di %1$s</string>
