--- a/app/src/cobrand/res/values-pt/strings.xml
+++ b/app/src/cobrand/res/values-pt/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Co-brand</string>
+  <string name="app_name">OPPO</string>
   <string name="reviewappview_highlighted_reviews_explanation_4">Torna-te um utilizador de %1$s por mais de 3 meses</string>
   <string name="update_self_msg">Há uma nova versão de %1$s disponível\nQueres atualizar?</string>
   <string name="hello_follow_me_on_aptoide">Olá! Segue-me em %1$s</string>
