--- a/app/src/cobrand/res/values/strings.xml
+++ b/app/src/cobrand/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Co-brand</string>
+  <string name="app_name">OPPO</string>
 
   <string name="reviewappview_highlighted_reviews_explanation_4">Be a user of %1$s for over 3 months</string>
   <string name="update_self_msg">There is a new version of %1$s available\nDo you want to update?</string>
