--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
   <string name="app_name">Aptoide</string>
+  <string name="toolbar_title">@string/app_name</string>
 
   <!-- Bottom Navigation -->
   <string name="games">Games</string>
