--- a/aptoide-ui/src/main/res/values/strings.xml
+++ b/aptoide-ui/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
   <string name="toolbar_title">Title Placeholder</string>
+  <string name="home_overflow_talkback">Options</string>
+  <string name="overflow_menu_settings">Settings</string>
+  <string name="overflow_menu_terms_conditions">Terms &amp; Conditions</string>
+  <string name="overflow_menu_privacy_policy">Privacy Policy</string>
 </resources>
