--- a/aptoide-ui/src/main/res/values/strings.xml
+++ b/aptoide-ui/src/main/res/values/strings.xml
@@ -12,9 +12,9 @@
   <string name="on_friday">on Friday</string>
   <string name="on_saturday">on Saturday</string>
   <string name="on_saunday">on Sunday</string>
-  <string name="date_just_now">Just now</string>
-  <string name="date_today">Today</string>
-  <string name="date_yesterday">Yesterday</string>
+  <string name="date_just_now">just now</string>
+  <string name="date_today">today</string>
+  <string name="date_yesterday">yesterday</string>
   <plurals name="hours">
         <item quantity="one">%d hour ago</item>
         <item quantity="two">%d hours ago</item>
