--- a/aptoide-ui/src/main/res/values/strings.xml
+++ b/aptoide-ui/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
   <string name="on_thursday">on Thursday</string>
   <string name="on_friday">on Friday</string>
   <string name="on_saturday">on Saturday</string>
-  <string name="on_saunday">on Sunday</string>
+  <string name="on_sunday">on Sunday</string>
   <string name="date_just_now">just now</string>
   <string name="date_today">today</string>
   <string name="date_yesterday">yesterday</string>
