--- a/aptoide-ui/src/main/res/values/strings.xml
+++ b/aptoide-ui/src/main/res/values/strings.xml
@@ -3,31 +3,30 @@
     
   
   <!-- Dates -->
-  <string name="date_published">Published %s</string>
   <string name="date_published_on">Published on %s</string>
-  <string name="on_monday">on Monday</string>
-  <string name="on_tuesday">on Tuesday</string>
-  <string name="on_wednesday">on Wednesday</string>
-  <string name="on_thursday">on Thursday</string>
-  <string name="on_friday">on Friday</string>
-  <string name="on_saturday">on Saturday</string>
-  <string name="on_sunday">on Sunday</string>
-  <string name="date_just_now">just now</string>
-  <string name="date_today">today</string>
-  <string name="date_yesterday">yesterday</string>
-  <plurals name="hours">
-        <item quantity="one">%d hour ago</item>
-        <item quantity="two">%d hours ago</item>
-        <item quantity="few">%d hours ago</item>
-        <item quantity="many">%d hours ago</item>
-        <item quantity="other">%d hours ago</item>
+  <string name="published_on_monday">Published on Monday</string>
+  <string name="published_on_tuesday">Published on Tuesday</string>
+  <string name="published_on_wednesday">Published on Wednesday</string>
+  <string name="published_on_thursday">Published on Thursday</string>
+  <string name="published_on_friday">Published on Friday</string>
+  <string name="published_on_saturday">Published on Saturday</string>
+  <string name="published_on_sunday">Published on Sunday</string>
+  <string name="published_just_now">Published just now</string>
+  <string name="published_today">Published today</string>
+  <string name="published_yesterday">Published yesterday</string>
+  <plurals name="published_hours">
+        <item quantity="one">Published %d hour ago</item>
+        <item quantity="two">Published %d hours ago</item>
+        <item quantity="few">Published %d hours ago</item>
+        <item quantity="many">Published %d hours ago</item>
+        <item quantity="other">Published %d hours ago</item>
   </plurals>
-  <plurals name="minutes">
-        <item quantity="one">%d minute ago</item>
-        <item quantity="two">%d minutes ago</item>
-        <item quantity="few">%d minutes ago</item>
-        <item quantity="many">%d minutes ago</item>
-        <item quantity="other">%d minutes ago</item>
+  <plurals name="published_minutes">
+        <item quantity="one">Published %d minute ago</item>
+        <item quantity="two">Published %d minutes ago</item>
+        <item quantity="few">Published %d minutes ago</item>
+        <item quantity="many">Published %d minutes ago</item>
+        <item quantity="other">Published %d minutes ago</item>
   </plurals>
   
   
