--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -785,7 +785,7 @@
   <string name="eskills_v2_card_9_title">One Tap Withdrawal</string>
   <string name="eskills_v2_card_9_body">You can easily withdraw your winnings into real money with the AppCoins Wallet.</string>
   <string name="eskills_v2_card_10_title">Start Now</string>
-  <string name="eskills_v2_card_10-body">Test your skills and become a champion to get rewarded!</string>
+  <string name="eskills_v2_card_10_body">Test your skills and become a champion to get rewarded!</string>
   <string name="eskills_v2_how_it_works_title">How Does It Work?</string>
   <string name="eskills_v2_how_1">Install of the e-Skills games</string>
   <string name="eskills_v2_wallet_disclaimer">The game comes with the AppCoins Wallet</string>
