--- a/app-games/src/main/res/values/strings.xml
+++ b/app-games/src/main/res/values/strings.xml
@@ -3,4 +3,39 @@
 
   <string name="games">Games</string>
 
+
+  <!-- Settings -->
+  <string name="overflow_menu_settings">Settings</string>
+  <string name="overflow_menu_terms_conditions">Terms &amp; Conditions</string>
+  <string name="settings_about_hardware_title">Hardware specs</string>
+  <string name="settings_about_title">About Us</string>
+  <string name="settings_about_version">Version %1$s (%2$s)</string>
+  <string name="settings_copied_to_clipboard_message">Copied to clipboard</string>
+  <string name="settings_general_title">General</string>
+  <string name="settings_theme_option_dark">Dark</string>
+  <string name="settings_theme_option_light">Light</string>
+  <string name="settings_theme_option_system">System default</string>
+  <string name="settings_theme_options_title">Theme</string>
+  <string name="settings_title">Settings</string>
+  <string name="settings_support">Support</string>
+  <string name="settings_feedback_button">Send feedback</string>
+  <string name="settings_legal_title">Legal</string>
+
+  <!-- Notifications -->
+  <string name="notifications_context_title">Get notified!</string>
+
+
+  <!-- Talkback -->
+  <string name="home_overflow_talkback">Options</string>
+
+  <!-- My Games -->
+  <string name="overflow_menu_privacy_policy">Privacy Policy</string>
+
+  <!-- Download over Wi-Fi -->
+  <string name="wifi_settings_title">Download only over Wi-Fi</string>
+
+  <!-- Fixed bundles -->
+  <string name="button_copy_title">Copy</string>
+  <string name="button_back_title">Back</string>
+
 </resources>
