--- a/app-games/src/main/res/values/strings.xml
+++ b/app-games/src/main/res/values/strings.xml
@@ -21,6 +21,10 @@
   <string name="settings_feedback_button">Send feedback</string>
   <string name="settings_legal_title">Legal</string>
 
+  <!-- MyGames -->
+  <string name="my_games_empty">We couldn\'t find any games installed on your device!</string>
+
+
   <!-- Notifications -->
   <string name="notifications_context_title">Get notified!</string>
 
@@ -35,7 +39,21 @@
   <string name="wifi_settings_title">Download only over Wi-Fi</string>
 
   <!-- Fixed bundles -->
+  <string name="fixed_bundle_just_arrived_title">Just Arrived</string>
+  <string name="fixed_bundle_my_games_title">My Games</string>
+  <string name="fixed_bundle_editors_choice_title">Editor\'s Choice</string>
+  <string name="fixed_bundle_editorial_title">Editorial</string>
+  <string name="fixed_bundle_trending_title">Trending</string>
+  <string name="fixed_bundle_publisher_title">Have Fun with %s</string>
+  <string name="button_retry_title">Retry</string>
+  <string name="generic_error_message">Something went wrong. Try again.</string>
+  <string name="generic_network_error_message">Oops, something went wrong. Please check your Internet connection.</string>
+
+
   <string name="button_copy_title">Copy</string>
   <string name="button_back_title">Back</string>
+  <string name="button_see_all_title">See All</string>
+  <string name="editorials_view_no_content_message">Oops, there\'s no content here yet!</string>
+
 
 </resources>
