--- a/app-games/src/main/res/values/strings.xml
+++ b/app-games/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
   <string name="app_name">App Games</string>
 
   <string name="games">Games</string>
+  <string name="search">Search</string>
 
 
   <!-- Settings -->
@@ -34,10 +35,15 @@
   <string name="app_view_image_description_body">Image of %1$s</string>
   <string name="app_view_screenshot_number">Screenshot %1$s</string>
   <string name="app_view_icon_description_body">Icon of %1$s</string>
+  <string name="search_remove_from_recent_talkback">remove from recent searches</string>
+  <string name="search_clear_talkback">clear search</string>
+  <string name="search_item_talkback">search</string>
 
 
   <!-- My Games -->
   <string name="overflow_menu_privacy_policy">Privacy Policy</string>
+  <string name="empty_category_body">There\'re no apps in this category... Yet!</string>
+
 
   <!-- Download over Wi-Fi -->
   <string name="wifi_settings_title">Download only over Wi-Fi</string>
@@ -58,6 +64,16 @@
   <string name="button_back_title">Back</string>
   <string name="button_see_all_title">See All</string>
   <string name="editorials_view_no_content_message">Oops, there\'s no content here yet!</string>
+
+  <!-- Search -->
+  <string name="search_suggested_title">Suggested Searches</string>
+  <string name="search_recent_title">Recent Searches</string>
+  <string name="search_popular_title">Popular Searches</string>
+  <string name="search_bar_label">Search for games...</string>
+  <string name="search_empty_body">Oops, there are no results for "%s".\nTry with different words!</string>
+
+  <!-- Install -->
+  <string name="button_install_title">Install</string>
 
 
 </resources>
