--- a/app-games/src/main/res/values/strings.xml
+++ b/app-games/src/main/res/values/strings.xml
@@ -28,6 +28,11 @@
 
   <!-- Notifications -->
   <string name="notifications_context_title">Get notified!</string>
+  <string name="notification_installing_title">Installing</string>
+  <string name="notification_waiting_body">Waiting for download</string>
+  <string name="notification_1_installed_title">Installed</string>
+  <string name="notification_downloading_body">Downloading %1$s%% of %2$s</string>
+  <string name="notification_waiting_for_wifi_title">Waiting for Wi-Fi</string>
 
 
   <!-- Talkback -->
@@ -47,6 +52,10 @@
 
   <!-- Download over Wi-Fi -->
   <string name="wifi_settings_title">Download only over Wi-Fi</string>
+  <string name="wifi_disclaimer_on_body">You\'re currently using your mobile data. Do you want to download %s when Wi-Fi is available?</string>
+  <string name="wifi_disclamer_off_body">This is a big file (%s). Do you want to download it when Wi-Fi is available?</string>
+  <string name="wifi_disclaimer_title">Are you sure?</string>
+
 
   <!-- Fixed bundles -->
   <string name="fixed_bundle_just_arrived_title">Just Arrived</string>
@@ -58,12 +67,44 @@
   <string name="button_retry_title">Retry</string>
   <string name="generic_error_message">Something went wrong. Try again.</string>
   <string name="generic_network_error_message">Oops, something went wrong. Please check your Internet connection.</string>
-
+  <string name="install_waiting_installation_message">Waiting for install</string>
+  <string name="install_installing_message">Installing</string>
+  <string name="install_error_short_message">Oops, an error occurred.</string>
 
   <string name="button_copy_title">Copy</string>
   <string name="button_back_title">Back</string>
   <string name="button_see_all_title">See All</string>
   <string name="editorials_view_no_content_message">Oops, there\'s no content here yet!</string>
+  <string name="button_update_title">Update</string>
+  <string name="button_open_app_title">Open</string>
+  <string name="install_waiting_download_message">Waiting for download</string>
+  <string name="downloading_percentage_body">%1$s%% of %2$s</string>
+  <string name="install_downloading_message">Downloading</string>
+
+
+  <!-- Common -->
+  <string name="download_now_button">Download Now</string>
+  <string name="uninstall_button">Uninstall</string>
+  <string name="go_back_button">Go Back</string>
+  <string name="uninstalling">Uninstalling</string>
+  <string name="resume_button">Resume</string>
+  <string name="waiting_for_connection">Waiting for connection</string>
+  <string name="wait_for_wifi_button">Wait for Wi-Fi</string>
+
+
+  <!-- Out of Space -->
+  <string name="out_of_space_title">Out of Space</string>
+  <string name="out_of_space_body">You need %s to continue with the installation.</string>
+  <string name="out_of_space_enough_body">You have enough free space now!</string>
+
+  <!-- Talkback -->
+  <string name="appview_status_outdated_talkback">Outdated</string>
+  <string name="appview_status_not_installed_talkback">Not installed</string>
+  <string name="appview_status_installed_talkback">Installed</string>
+  <string name="appview_status_failed_talkback">Failed</string>
+  <string name="appview_action_cancel_talkback">Cancel</string>
+  <string name="appview_installer_talkback">%1$s installer.</string>
+  <string name="appview_action_double_tap_talkback">Double tap to %1$s</string>
 
   <!-- Search -->
   <string name="search_suggested_title">Suggested Searches</string>
