[APP-2467] Update general error views UI

--- a/app-games/src/main/res/values/strings.xml
+++ b/app-games/src/main/res/values/strings.xml
@@ -77,6 +77,12 @@
   <string name="install_waiting_installation_message">Waiting for install</string>
   <string name="install_installing_message">Installing</string>
   <string name="install_error_short_message">Oops, an error occurred.</string>
+  <string name="error_message_no_internet_title">Oops, something went wrong</string>
+  <string name="error_message_no_internet_body">Please check your Internet connection.</string>
+  <string name="error_message_generic_title">Something went wrong</string>
+  <string name="error_message_generic_body">Try again.</string>
+
+
 
   <string name="app_info_send_email_subject">Feedback</string>
 
