--- a/app-games/src/main/res/values/strings.xml
+++ b/app-games/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
 
   <!-- Settings -->
   <string name="overflow_menu_settings">Settings</string>
-  <string name="overflow_menu_terms_conditions">Terms &amp; Conditions</string>
+  <string name="overflow_menu_terms_conditions">Terms of Use</string>
   <string name="overflow_menu_privacy_policy">Privacy Policy</string>
   <string name="settings_about_hardware_title">Hardware specs</string>
   <string name="settings_about_title">About Us</string>
