--- a/app-games/src/main/res/values/strings.xml
+++ b/app-games/src/main/res/values/strings.xml
@@ -1,14 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
   <string name="app_name">App Games</string>
-
   <!-- Bottom Bar -->
   <string name="games">Games</string>
   <string name="categories">Categories</string>
   <string name="search">Search</string>
-
   <!-- Common -->
   <string name="send_button">Send</string>
-
   <!-- Settings -->
   <string name="overflow_menu_settings">Settings</string>
   <string name="overflow_menu_terms_conditions">Terms &amp; Conditions</string>
@@ -31,12 +29,10 @@
   <string name="settings_payment_support_description_title">Description</string>
   <string name="settings_contact_form_character_limit_title">(50 Characters Min.)</string>
   <string name="settings_payment_support_description_and_limit">Description (50 Characters Min.)</string>
-
   <!-- MyGames -->
   <string name="my_games_empty">We couldn\'t find any games installed on your device!</string>
   <string name="my_games_progress_message">Organizing your games</string>
   <string name="empty_category_body">There\'re no apps in this category... Yet!</string>
-
   <!-- Notifications -->
   <string name="notifications_context_title">Get notified!</string>
   <string name="notification_installing_title">Installing</string>
@@ -45,8 +41,6 @@
   <string name="notification_downloading_body">Downloading %1$s%% of %2$s</string>
   <string name="notification_waiting_for_wifi_title">Waiting for Wi-Fi</string>
   <string name="notifications_context_body">We\'ll let you know about the latest trends in the gaming world!</string>
-
-
   <!-- Talkback -->
   <string name="home_overflow_talkback">Options</string>
   <string name="app_view_image_description_body">Image of %1$s</string>
@@ -55,15 +49,11 @@
   <string name="search_remove_from_recent_talkback">remove from recent searches</string>
   <string name="search_clear_talkback">clear search</string>
   <string name="search_item_talkback">search</string>
-
-
   <!-- Download over Wi-Fi -->
   <string name="wifi_settings_title">Download only over Wi-Fi</string>
   <string name="wifi_disclaimer_on_body">You\'re currently using your mobile data. Do you want to download %s when Wi-Fi is available?</string>
   <string name="wifi_disclamer_off_body">This is a big file (%s). Do you want to download it when Wi-Fi is available?</string>
   <string name="wifi_disclaimer_title">Are you sure?</string>
-
-
   <!-- Fixed bundles -->
   <string name="editorial_more_articles_title">More articles</string>
   <string name="fixed_bundle_just_arrived_title">Just Arrived</string>
@@ -72,7 +62,7 @@
   <string name="fixed_bundle_editorial_title">Editorial</string>
   <string name="fixed_bundle_trending_title">Trending</string>
   <string name="fixed_bundle_publisher_title">Have Fun with %s</string>
-  <string name="button_retry_title">Retry</string>
+  <string name="retry_button" comment="button_retry_title">Retry</string>
   <string name="generic_error_message">Something went wrong. Try again.</string>
   <string name="generic_network_error_message">Oops, something went wrong. Please check your Internet connection.</string>
   <string name="install_waiting_installation_message">Waiting for install</string>
@@ -82,11 +72,7 @@
   <string name="error_message_no_internet_body">Please check your Internet connection.</string>
   <string name="error_message_generic_title">Something went wrong</string>
   <string name="error_message_generic_body">Try again.</string>
-
-
-
   <string name="app_info_send_email_subject">Feedback</string>
-
   <string name="button_copy_title">Copy</string>
   <string name="button_back_title">Back</string>
   <string name="button_see_all_title">See All</string>
@@ -96,8 +82,6 @@
   <string name="install_waiting_download_message">Waiting for download</string>
   <string name="downloading_percentage_body">%1$s%% of %2$s</string>
   <string name="install_downloading_message">Downloading</string>
-
-
   <!-- Common -->
   <string name="download_now_button">Download Now</string>
   <string name="uninstall_button">Uninstall</string>
@@ -107,13 +91,10 @@
   <string name="waiting_for_connection">Waiting for connection</string>
   <string name="wait_for_wifi_button">Wait for Wi-Fi</string>
   <string name="continue_button">Continue</string>
-
-
   <!-- Out of Space -->
   <string name="out_of_space_title">Out of Space</string>
   <string name="out_of_space_body">You need %s to continue with the installation.</string>
   <string name="out_of_space_enough_body">You have enough free space now!</string>
-
   <!-- Talkback -->
   <string name="appview_status_outdated_talkback">Outdated</string>
   <string name="appview_status_not_installed_talkback">Not installed</string>
@@ -122,21 +103,30 @@
   <string name="appview_action_cancel_talkback">Cancel</string>
   <string name="appview_installer_talkback">%1$s installer.</string>
   <string name="appview_action_double_tap_talkback">Double tap to %1$s</string>
-
   <!-- Search -->
   <string name="search_suggested_title">Suggested Searches</string>
   <string name="search_recent_title">Recent Searches</string>
   <string name="search_popular_title">Popular Searches</string>
   <string name="search_bar_label">Search for games...</string>
   <string name="search_empty_body">Oops, there are no results for "%s".\nTry with different words!</string>
-
   <!-- Install -->
   <string name="button_install_title">Install</string>
-
   <!-- Common -->
   <string name="notice_at_collection_and_privacy_policy">Notice at Collection &amp; Privacy Policy</string>
   <string name="terms_and_conditions">Terms</string>
   <string name="continue_to_accept_tandc_and_pp_disclaimer">By continuing you accept the %1$s and %2$s.</string>
-
-
+  <string name="appview_details_tab_title" comment="details">Details</string>
+  <string name="appview_related_tab_title" comment="related">Related</string>
+  <string name="appview_info_tab_title" comment="info">Info</string>
+  <string name="bottom_navigation_discovery" comment="discovery">Discovery</string>
+  <string name="appview_info_version_name_title" comment="version_name">Version name</string>
+  <string name="appview_info_package_name_title" comment="package_name">Package name</string>
+  <string name="appview_info_release_title" comment="release">Release</string>
+  <string name="appview_info_update_title" comment="updated_on">Updated on</string>
+  <string name="appview_info_download_size_title" comment="download_size">Download size</string>
+  <string name="appview_info_website_title" comment="website">Website</string>
+  <string name="appview_info_email_title" comment="email">Email</string>
+  <string name="appview_info_permissions_title" comment="permissions">Permissions</string>
+  <string name="download_percentage_body" comment="1_s_of_2_s">%1$s%% of %2$s</string>
+  <string name="error_short_title" comment="oops_an_error_occurred">Oops, an error occurred</string>
 </resources>
