--- a/app-games/src/main/res/values/strings.xml
+++ b/app-games/src/main/res/values/strings.xml
@@ -142,4 +142,21 @@
   <string name="app_size_mb_title" comment="s_mb">%s MB</string>
   <string name="uninstalled_title" comment="uninstalled">Uninstalled</string>
   <string name="error_no_internet_body" comment="please_check_your_internet_connection">Please check your Internet connection.</string>
+  <string name="iap_appc_title" comment="pay_with_the_app_coins_wallet">Pay with the AppCoins Wallet</string>
+  <string name="iap_appc_2_body" comment="it_ll_be_installed_automatically_and_you_ll_g">It\'ll be installed automatically and you\'ll get a bonus in all purchases!</string>
+  <string name="buy_button" comment="buy">Buy</string>
+  <string name="iap_other_payment_methods_button" comment="other_payment_methods">Other payment methods</string>
+  <string name="iap_remember_card_button" comment="remember_card">Remember card</string>
+  <string name="iap_card_number" comment="card_number">Card number</string>
+  <string name="iap_card_expiry" comment="expiry_date">Expiry date</string>
+  <string name="iap_card_cvc" comment="cvc_cvv">CVC/CVV</string>
+  <string name="iab_change_card_button" comment="change_card">Change card</string>
+  <string name="ui_flow_mvp__game__making" comment="done">Done!</string>
+  <string name="purchase_making_purchase_title" comment="making_purchase">Making Purchase...</string>
+  <string name="manage_cards_error_details" comment="are_you_sure_your_card_details_are_correct_ple">Are you sure your card details are correct? Please try again!</string>
+  <string name="log_out_button" comment="log_out">Log out</string>
+  <string name="&amp;#x2728;_ui_flow_mvp_&amp;#x2728;__game__youll_get_a_bonus_in_all_purchases">You\'ll get a bonus in all purchases!</string>
+  <string name="iap_appc_body">You\'ll get a bonus in all purchases!</string>
+  <string name="iap_appc_wallet_install_success_title" comment="you_can_now_complete_your_purchase">You can now complete your purchase.</string>
+  <string name="iap_appc_wallet_install_success_body" comment="the_app_coins_wallet_is_now_installed">The AppCoins Wallet is now installed!</string>
 </resources>
