--- a/app-games/src/main/res/values/strings.xml
+++ b/app-games/src/main/res/values/strings.xml
@@ -183,4 +183,6 @@
   <string name="purchase_error_in_progress_title">Your request was already processed or is in progress.</string>
   <string name="purchase_card_error_CVV_title">Wrong CVV/CVC</string>
   <string name="purchase_error_expired_card_title">It seems your card is expired.</string>
+  <string name="iap_already_processing_title">It seems this purchase is already being processed.</string>
+  <string name="iap_already_processing_body">This purchase may take a while, so, please hold on until completed or contact our Support Team.</string>
 </resources>
