--- a/app-games/src/main/res/values/strings.xml
+++ b/app-games/src/main/res/values/strings.xml
@@ -88,6 +88,7 @@
   <string name="download_now_button">Download Now</string>
   <string name="uninstall_button">Uninstall</string>
   <string name="go_back_button">Go Back</string>
+  <string name="go_back_to_game_button">Go Back to Game</string>
   <string name="uninstalling">Uninstalling</string>
   <string name="resume_button">Resume</string>
   <string name="waiting_for_connection">Waiting for connection</string>
