--- a/app-games/src/main/res/values-it-rIT/strings.xml
+++ b/app-games/src/main/res/values-it-rIT/strings.xml
@@ -1,108 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">App Games</string>
+  <string name="app_name">Aptoide Games</string>
   <!-- Bottom Bar -->
   <string name="games">Giochi</string>
   <string name="categories">Categorie</string>
   <string name="search">Cerca</string>
   <!-- Common -->
   <string name="send_button">Invia</string>
+  <string name="try_again">Ritenta.</string>
+  <string name="please_wait">Attendere prego.</string>
   <!-- Settings -->
   <string name="overflow_menu_settings">Impostazioni</string>
-  <string name="overflow_menu_terms_conditions">Terms &amp; Conditions</string>
+  <string name="overflow_menu_terms_conditions">Termini e condizioni</string>
   <string name="overflow_menu_privacy_policy">Informativa sulla privacy</string>
-  <string name="settings_about_hardware_title">Hardware specs</string>
+  <string name="settings_about_hardware_title">Specifiche Hardware</string>
   <string name="settings_about_title">Chi siamo</string>
-  <string name="settings_about_version">Version %1$s (%2$s)</string>
-  <string name="settings_copied_to_clipboard_message">Copied to clipboard</string>
+  <string name="settings_about_version">Versione %1$s (%2$s)</string>
+  <string name="settings_copied_to_clipboard_message">Copiato negli appunti</string>
   <string name="settings_general_title">Generale</string>
   <string name="settings_theme_option_dark">Scuro</string>
   <string name="settings_theme_option_light">Chiaro</string>
-  <string name="settings_theme_option_system">System default</string>
+  <string name="settings_theme_option_system">Default di sistema</string>
   <string name="settings_theme_options_title">Tema</string>
   <string name="settings_title">Impostazioni</string>
   <string name="settings_support">Supporto</string>
   <string name="settings_feedback_button">Invia Feedback</string>
   <string name="settings_feedback_title">Invia Feedback</string>
   <string name="settings_legal_title">Info legali</string>
-  <string name="settings_send_feedback_body">Let us know what you think about Aptoide Games!\n\u2022 Any new feature you would like to see?\n\u2022 How do you think we can improve?</string>
+  <string name="settings_send_feedback_body">Dicci cosa ne pensi di Aptoide Games!\n\u2022 Ci sono funzioni che vorresti sfruttare in futuro?\n\u2022 Come possiamo migliorare ancora di più?</string>
   <string name="settings_payment_support_description_title">Descrizione</string>
-  <string name="settings_contact_form_character_limit_title">(50 Characters Min.)</string>
-  <string name="settings_payment_support_description_and_limit" comment="settings_payment_support_description_and_limit">Description (50 characters min.)</string>
+  <string name="settings_contact_form_character_limit_title">(Min. 50 caratteri)</string>
+  <string name="settings_payment_support_description_and_limit" comment="settings_payment_support_description_and_limit">Descrizione (min. 50 caratteri)</string>
   <!-- MyGames -->
-  <string name="my_games_empty">We couldn\'t find any games installed on your device!</string>
-  <string name="my_games_progress_message">Organizing your games</string>
-  <string name="empty_category_body">There\'re no apps in this category... Yet!</string>
+  <string name="my_games_empty">Non abbiamo trovato giochi installati sul tuo dispositivo!</string>
+  <string name="my_games_progress_message">Organizzazione giochi in corso</string>
+  <string name="empty_category_body">Non ci sono ancora applicazioni in questa categoria... al momento!</string>
   <!-- Notifications -->
-  <string name="notifications_context_title">Get notified!</string>
+  <string name="notifications_context_title">Ricevi le notifiche!</string>
   <string name="notification_installing_title">Installazione in corso</string>
-  <string name="notification_waiting_body">Waiting for download</string>
+  <string name="notification_waiting_body">In attesa del download</string>
   <string name="notification_1_installed_title">Installato</string>
-  <string name="notification_downloading_body">Downloading %1$s%% of %2$s</string>
-  <string name="notification_waiting_for_wifi_title">Waiting for Wi-Fi</string>
-  <string name="notifications_context_body">We\'ll let you know about the latest trends in the gaming world!</string>
+  <string name="notification_downloading_body">Download in corso: %1$s%% di %2$s</string>
+  <string name="notification_waiting_for_wifi_title">In attesa di Wi-Fi</string>
+  <string name="notifications_context_body">Ti terremo informato sulle ultime novità dell\'universo del gioco online!</string>
   <!-- Talkback -->
-  <string name="home_overflow_talkback">Options</string>
-  <string name="app_view_image_description_body">Image of %1$s</string>
+  <string name="home_overflow_talkback">Opzioni</string>
+  <string name="app_view_image_description_body">Immagine di %1$s</string>
   <string name="app_view_screenshot_number">Screenshot %1$s</string>
-  <string name="app_view_icon_description_body">Icon of %1$s</string>
-  <string name="search_remove_from_recent_talkback">remove from recent searches</string>
-  <string name="search_clear_talkback">clear search</string>
+  <string name="app_view_icon_description_body">Icona di %1$s</string>
+  <string name="search_remove_from_recent_talkback">rimuovi dalle ricerche recenti</string>
+  <string name="search_clear_talkback">cancella ricerca</string>
   <string name="search_item_talkback">cerca</string>
   <!-- Download over Wi-Fi -->
-  <string name="wifi_settings_title">Download only over Wi-Fi</string>
-  <string name="wifi_disclaimer_on_body">You\'re currently using your mobile data. Do you want to download %s when Wi-Fi is available?</string>
-  <string name="wifi_disclamer_off_body">This is a big file (%s). Do you want to download it when Wi-Fi is available?</string>
+  <string name="wifi_settings_title">Scaricare solo quando il Wi-Fi è attivo</string>
+  <string name="wifi_disclaimer_on_body">Al momento stai usando i dati mobili. Vuoi effettuare il download di %s quando il Wi-Fi sarà di nuovo disponibile?</string>
+  <string name="wifi_disclamer_off_body">Questo file è di dimensioni elevate (%s). Vuoi effettuare il download quando il Wi-Fi sarà di nuovo disponibile?</string>
   <string name="wifi_disclaimer_title">Sei sicuro?</string>
   <!-- Fixed bundles -->
-  <string name="editorial_more_articles_title">More articles</string>
-  <string name="fixed_bundle_just_arrived_title">Just Arrived</string>
-  <string name="fixed_bundle_my_games_title">My Games</string>
+  <string name="editorial_more_articles_title">Altri articoli</string>
+  <string name="fixed_bundle_just_arrived_title">Appena arrivato</string>
+  <string name="fixed_bundle_my_games_title">I miei giochi</string>
   <string name="fixed_bundle_editors_choice_title">Scelta dell\'Editore</string>
   <string name="fixed_bundle_editorial_title">Editoriale</string>
   <string name="fixed_bundle_trending_title">Di tendenza</string>
-  <string name="fixed_bundle_publisher_title">Have Fun with %s</string>
+  <string name="fixed_bundle_publisher_title">Divertiti con %s</string>
   <string name="retry_button" comment="button_retry_title">Riprova</string>
   <string name="generic_error_message">Qualcosa è andato storto. Riprova.</string>
   <string name="generic_network_error_message">Oh no! Qualcosa è andato storto. Controlla la tua connessione internet.</string>
-  <string name="install_waiting_installation_message">Waiting for install</string>
+  <string name="install_waiting_installation_message">In attesa dell\'installazione</string>
   <string name="install_installing_message">Installazione in corso</string>
-  <string name="install_error_short_message">Oops, an error occurred.</string>
+  <string name="install_error_short_message">Siamo spiacenti, si è verificato un errore.</string>
   <string name="error_message_no_internet_title">Oh no! Qualcosa è andato storto</string>
-  <string name="error_message_no_internet_body">Please check your Internet connection.</string>
+  <string name="error_message_no_internet_body">Controlla la tua connessione internet.</string>
   <string name="error_message_generic_title">Si è verificato un errore</string>
   <string name="error_message_generic_body">Riprova.</string>
   <string name="app_info_send_email_subject">Feedback</string>
   <string name="button_copy_title">Copia</string>
   <string name="button_back_title">Indietro</string>
   <string name="button_see_all_title">Vedi tutto</string>
-  <string name="editorials_view_no_content_message">Oops, there\'s no content here yet!</string>
+  <string name="editorials_view_no_content_message">Non ci sono ancora contenuti al momento!</string>
   <string name="button_update_title">Aggiorna</string>
   <string name="button_open_app_title">Apri</string>
-  <string name="install_waiting_download_message">Waiting for download</string>
-  <string name="downloading_percentage_body">%1$s%% of %2$s</string>
+  <string name="install_waiting_download_message">In attesa del download</string>
+  <string name="downloading_percentage_body">%1$s%% di %2$s</string>
   <string name="install_downloading_message">Download in corso</string>
   <!-- Common -->
-  <string name="download_now_button">Download Now</string>
+  <string name="download_now_button">Scaricalo adesso</string>
   <string name="uninstall_button">Disinstalla</string>
-  <string name="go_back_button">Go Back</string>
-  <string name="uninstalling">Uninstalling</string>
+  <string name="go_back_button">Indietro</string>
+  <string name="go_back_to_game_button">Go Back to Game</string>
+  <string name="uninstalling">Disinstallazione in corso</string>
   <string name="resume_button">Riprendi</string>
-  <string name="waiting_for_connection">Waiting for connection</string>
-  <string name="wait_for_wifi_button">Wait for Wi-Fi</string>
+  <string name="waiting_for_connection">In attesa di connessione</string>
+  <string name="wait_for_wifi_button">In attesa di Wi-Fi</string>
   <string name="continue_button">Continua</string>
   <!-- Out of Space -->
-  <string name="out_of_space_title">Out of Space</string>
+  <string name="out_of_space_title">Spazio esaurito</string>
   <string name="out_of_space_body">Spazio necessario per procedere con l\'installazione: %s.</string>
-  <string name="out_of_space_enough_body">You have enough free space now!</string>
+  <string name="out_of_space_enough_body">Adesso hai abbastanza spazio libero!</string>
   <!-- Talkback -->
-  <string name="appview_status_outdated_talkback">Outdated</string>
-  <string name="appview_status_not_installed_talkback">Not installed</string>
+  <string name="appview_status_outdated_talkback">Non aggiornato</string>
+  <string name="appview_status_not_installed_talkback">Non installato</string>
   <string name="appview_status_installed_talkback">Installato</string>
   <string name="appview_status_failed_talkback">Non riuscito</string>
   <string name="appview_action_cancel_talkback">Annulla</string>
-  <string name="appview_installer_talkback">%1$s installer.</string>
-  <string name="appview_action_double_tap_talkback">Double tap to %1$s</string>
+  <string name="appview_installer_talkback">Installatore %1$s.</string>
+  <string name="appview_action_double_tap_talkback">Fai doppio tocco per %1$s</string>
   <!-- Search -->
   <string name="search_suggested_title">Suggested Searches</string>
   <string name="search_recent_title">Recent Searches</string>
@@ -127,10 +130,10 @@
   <string name="appview_info_website_title" comment="website">Sito Web</string>
   <string name="appview_info_email_title" comment="email">E-mail</string>
   <string name="appview_info_permissions_title" comment="permissions">Permessi</string>
-  <string name="download_percentage_body" comment="1_s_of_2_s">%1$s%% of %2$s</string>
-  <string name="error_short_title" comment="oops_an_error_occurred">Oops, an error occurred</string>
+  <string name="download_percentage_body" comment="1_s_of_2_s">%1$s%% di %2$s</string>
+  <string name="error_short_title" comment="oops_an_error_occurred">Siamo spiacenti, si è verificato un errore</string>
   <string name="purchase_done_existing_bonus_body">You now have %s in bonus. Download the AppCoins Wallet to use them in your next purchase.</string>
-  <string name="bonus_banner_body" comment="you_ll_get_a_bonus_in_all_games_identified_wit">You\’ll get a bonus in all games identified with %s.</string>
+  <string name="bonus_banner_body" comment="you_ll_get_a_bonus_in_all_games_identified_wit">You\'ll get a bonus in all games identified with %s.</string>
   <string name="bonus_banner_title" comment="up_to_s_bonus">Up to %s%% Bonus</string>
   <string name="settings_payments_title" comment="contact_support_team">Contatta l\'assistenza clienti</string>
   <string name="settings_contact_support_body" comment="billing_terms_of_use">Billing Terms of Use</string>
@@ -138,10 +141,10 @@
   <string name="powered_by_title" comment="powered_by">Offerto da</string>
   <string name="contact_support_title" comment="contact_support">Contatta l\'assistenza clienti</string>
   <string name="contact_support_field_body" comment="please_give_us_all_the_details_n_u_2022_when_di">Please give us all the details:\n\u2022 When did the problem start\n\u2022 On which game are you making a purchase\n\nOnce you tap on Send, your mail app will open. Feel free to attach a screenshot or video about the issue!</string>
-  <string name="apkfy_install_title" comment="do_you_want_to_install_this_game">Do you want to install this game?</string>
+  <string name="apkfy_install_title" comment="do_you_want_to_install_this_game">Vuoi installare questo gioco?</string>
   <string name="app_size_mb_title" comment="s_mb">%s MB</string>
   <string name="uninstalled_title" comment="uninstalled">Disinstallato</string>
-  <string name="error_no_internet_body" comment="please_check_your_internet_connection">Please check your Internet connection.</string>
+  <string name="error_no_internet_body" comment="please_check_your_internet_connection">Controlla la tua connessione internet.</string>
   <string name="iap_appc_title" comment="pay_with_the_app_coins_wallet">Paga con l\'AppCoins Wallet</string>
   <string name="iap_appc_2_body" comment="it_ll_be_installed_automatically_and_you_ll_g">It\'ll be installed automatically and you\'ll get a bonus in all purchases!</string>
   <string name="buy_button" comment="buy">Acquista</string>
@@ -151,7 +154,7 @@
   <string name="iap_card_expiry" comment="expiry_date">Data di scadenza</string>
   <string name="iap_card_cvc" comment="cvc_cvv">CVC/CVV</string>
   <string name="iab_change_card_button" comment="change_card">Cambia carta</string>
-  <string name="ui_flow_mvp__game__making" comment="done">Done!</string>
+  <string name="done_title" comment="done">Fatto!</string>
   <string name="purchase_making_purchase_title" comment="making_purchase">Making Purchase...</string>
   <string name="manage_cards_error_details" comment="are_you_sure_your_card_details_are_correct_ple">Hai controllato che i dati della tua carta siano corretti? Ritenta!</string>
   <string name="log_out_button" comment="log_out">Logout</string>
@@ -160,4 +163,27 @@
   <string name="iap_appc_wallet_install_success_title" comment="you_can_now_complete_your_purchase">You can now complete your purchase.</string>
   <string name="iap_appc_wallet_install_success_body" comment="the_app_coins_wallet_is_now_installed">The AppCoins Wallet is now installed!</string>
   <string name="storage_access_permission_request_message">Allow access to your phone’s storage so we can download and install this app.</string>
+  <!-- Payment Errors-->
+  <string name="payments_error_not_enough_balance_body">You don\'t have enough balance</string>
+  <string name="payments_error_old_card_title">It seems you registered this card long time ago!</string>
+  <string name="payments_error_old_card_body">Insert the card details again or use a different one.</string>
+  <string name="purchase_error_payment_rejected">The transaction has been rejected.</string>
+  <string name="purchase_error_try_other_card_body">Please try with a different card or payment method.</string>
+  <string name="purchase_card_error_general_title">There was a problem with your card.</string>
+  <string name="purchase_error_try_other_payment_method_body">Please try with a different payment method.</string>
+  <string name="purchase_card_error_no_funds">It seems you don\'t have enough funds or there\'s a limit on your card.</string>
+  <string name="purchase_card_error_invalid_details_title">Invalid card number.</string>
+  <string name="purchase_error_check_it_body">Please check it and try again.</string>
+  <string name="purchase_card_error_not_supported_title">Your card is not supported yet.</string>
+  <string name="purchase_error_wrong_pin_title">There was a problem with your pin.</string>
+  <string name="purchase_error_3d_title">There was a problem with your 3D authentication.</string>
+  <string name="purchase_card_rejected_title">The transaction has been rejected by your bank.</string>
+  <string name="purchase_error_invalid_credit_card_title">Invalid bank card number.</string>
+  <string name="purchase_error_invalid_credit_card_body">Please make sure all digits are correct.</string>
+  <string name="purchase_error_card_security_validation_title">There was an error on the 2nd level validation of this transaction.</string>
+  <string name="purchase_error_in_progress_title">Your request was already processed or is in progress.</string>
+  <string name="purchase_card_error_CVV_title">CVV/CVC errato</string>
+  <string name="purchase_error_expired_card_title">La tua carta è scaduta.</string>
+  <string name="iap_already_processing_title">It seems this purchase is already being processed.</string>
+  <string name="iap_already_processing_body">This purchase may take a while, so, please hold on until completed or contact our Support Team.</string>
 </resources>
