--- a/app-games/src/main/res/values-es/strings.xml
+++ b/app-games/src/main/res/values-es/strings.xml
@@ -1,36 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
   <!-- Bottom Bar -->
-  <string name="games">Juegos</string>
   <string name="categories">Categorías</string>
   <string name="search">Buscar</string>
   <!-- Common -->
   <string name="send_button">Enviar</string>
-  <string name="try_again">¡Prueba de nuevo!</string>
+  <string name="try_again">Por favor, inténtalo de de nuevo.</string>
   <string name="please_wait">Por favor, espera.</string>
   <!-- Settings -->
-  <string name="overflow_menu_settings">Configuración</string>
+  <string name="overflow_menu_settings">Ajustes</string>
   <string name="overflow_menu_terms_conditions">Términos y Condiciones</string>
   <string name="overflow_menu_privacy_policy">Política de Privacidad</string>
-  <string name="settings_about_hardware_title">Especificaciones de Hardware</string>
-  <string name="settings_about_title">Sobre nosotros</string>
+  <string name="settings_about_hardware_title">Especificaciones de hardware</string>
+  <string name="settings_about_title">Acerca de</string>
   <string name="settings_about_version">Versión %1$s (%2$s)</string>
-  <string name="settings_copied_to_clipboard_message">Copiado al portapapeles</string>
+  <string name="settings_copied_to_clipboard_message">Copiado</string>
   <string name="settings_general_title">General</string>
   <string name="settings_theme_option_dark">Oscuro</string>
   <string name="settings_theme_option_light">Claro</string>
   <string name="settings_theme_option_system">Definido por el sistema</string>
   <string name="settings_theme_options_title">Tema</string>
-  <string name="settings_title">Configuración</string>
+  <string name="settings_title">Ajustes</string>
   <string name="settings_support">Ayuda</string>
   <string name="settings_feedback_button">Enviar comentarios</string>
-  <string name="settings_feedback_title">Enviar comentarios</string>
+  <string name="settings_feedback_title">Enviar Comentarios</string>
   <string name="settings_legal_title">Legal</string>
-  <string name="settings_send_feedback_body">¡Dinos lo que opinas sobre Aptoide Games!\n\u2022 ¿Hay alguna función que te gustaría ver?\n\u2022 ¿Cómo crees que podemos mejorar?</string>
   <string name="settings_payment_support_description_title">Descripción</string>
-  <string name="settings_contact_form_character_limit_title">(min. 50 caracteres)</string>
-  <string name="settings_payment_support_description_and_limit" comment="settings_payment_support_description_and_limit">Descripción (min. 50 caracteres)</string>
   <!-- MyGames -->
   <string name="my_games_empty">No encontramos ningún juego instalado en este dispositivo.</string>
   <string name="my_games_progress_message">Organizando tus juegos</string>
@@ -39,9 +34,9 @@
   <string name="notifications_context_title">¡Recibe notificaciones!</string>
   <string name="notification_installing_title">Instalando</string>
   <string name="notification_waiting_body">Esperando descarga</string>
-  <string name="notification_1_installed_title">Instalada</string>
-  <string name="notification_downloading_body">Descargando %1$s%% de %2$s.</string>
-  <string name="notification_waiting_for_wifi_title">Esperando al wifi</string>
+  <string name="notification_1_installed_title">Instalado</string>
+  <string name="notification_downloading_body">Descargando %1$s%% de %2$s</string>
+  <string name="notification_waiting_for_wifi_title">Esperarando por wifi</string>
   <string name="notifications_context_body">Te informaremos de todas las tendencias en el mundo del gaming.</string>
   <!-- Talkback -->
   <string name="home_overflow_talkback">Opciones</string>
@@ -70,10 +65,9 @@
   <string name="install_waiting_installation_message">Esperando para instalar</string>
   <string name="install_installing_message">Instalando</string>
   <string name="install_error_short_message">Ups, ocurrió un error.</string>
-  <string name="error_message_no_internet_title">Ups, algo salió mal</string>
+  <string name="error_message_no_internet_title">Vaya, algo salió mal</string>
   <string name="error_message_no_internet_body">Por favor, comprueba tu conexión a internet.</string>
   <string name="error_message_generic_title">Algo salió mal</string>
-  <string name="error_message_generic_body">Intentar de nuevo.</string>
   <string name="app_info_send_email_subject">Danos tu opinión</string>
   <string name="button_copy_title">Copiar</string>
   <string name="button_back_title">Volver</string>
@@ -88,7 +82,6 @@
   <string name="download_now_button">Descargar ahora</string>
   <string name="uninstall_button">Desinstalar</string>
   <string name="go_back_button">Volver</string>
-  <string name="go_back_to_game_button">Go Back to Game</string>
   <string name="uninstalling">Desinstalando</string>
   <string name="resume_button">Reanudar</string>
   <string name="waiting_for_connection">Esperando conexión</string>
@@ -115,14 +108,12 @@
   <!-- Install -->
   <string name="button_install_title">Instalar</string>
   <!-- Common -->
-  <string name="notice_at_collection_and_privacy_policy">Aviso de Recolección y la Política de Privacidad</string>
+  <string name="notice_at_collection_and_privacy_policy">Aviso sobre Recopilación de Datos y Política de Privacidad</string>
   <string name="terms_and_conditions">Términos</string>
-  <string name="continue_to_accept_tandc_and_pp_disclaimer">Al continuar, aceptas los %1$s y la %2$s.</string>
+  <string name="continue_to_accept_tandc_and_pp_disclaimer">Al continuar, aceptas el %1$s y %2$s.</string>
   <string name="appview_details_tab_title" comment="details">Detalles</string>
   <string name="appview_related_tab_title" comment="related">Relacionado</string>
   <string name="appview_info_tab_title" comment="info">Info</string>
-  <string name="bottom_navigation_discovery" comment="discovery">Explorar</string>
-  <string name="appview_info_version_name_title" comment="version_name">Nombre de la versión</string>
   <string name="appview_info_package_name_title" comment="package_name">Nombre del paquete</string>
   <string name="appview_info_release_title" comment="release">Publicada</string>
   <string name="appview_info_update_title" comment="updated_on">Actualizada el</string>
@@ -132,17 +123,10 @@
   <string name="appview_info_permissions_title" comment="permissions">Permisos</string>
   <string name="download_percentage_body" comment="1_s_of_2_s">%1$s%% de %2$s</string>
   <string name="error_short_title" comment="oops_an_error_occurred">Ups, ocurrió un error</string>
-  <string name="purchase_done_existing_bonus_body">Ahora tienes %s en bonus. Descarga la AppCoins Wallet para usarlo en tu próxima compra.</string>
-  <string name="bonus_banner_body" comment="you_ll_get_a_bonus_in_all_games_identified_wit">Recibirán un bonus en todos los juegos indentificados con %s.</string>
   <string name="bonus_banner_title" comment="up_to_s_bonus">Hasta %s%% de Bonus</string>
-  <string name="settings_payments_title" comment="contact_support_team">Contacta con nosotros</string>
-  <string name="settings_contact_support_body" comment="billing_terms_of_use">Condiciones de Compra de Aptoide</string>
+  <string name="settings_payments_title" comment="contact_support_team">Contactar al Equipo de Soporte</string>
   <string name="settings_billing_terms_body" comment="payments">Pagos</string>
-  <string name="powered_by_title" comment="powered_by">Ofrecido por</string>
-  <string name="contact_support_title" comment="contact_support">Contacta con nosotros</string>
-  <string name="contact_support_field_body" comment="please_give_us_all_the_details_n_u_2022_when_di">Por favor, danos todos los detalles:\n\u2022 Cuándo comenzó el problema\n\u2022 En qué juego estabas haciendo una compra\n\nUna vez toques en Enviar, se abrirá tu app de correo. Puedes adjuntar una captura de pantalla o un vídeo sobre el problema.</string>
-  <string name="apkfy_install_title" comment="do_you_want_to_install_this_game">¿Quieres instalar este juego?</string>
-  <string name="app_size_mb_title" comment="s_mb">%s MB</string>
+  <string name="contact_support_field_body" comment="please_give_us_all_the_details_n_u_2022_when_di">Por favor, danos todos los detalles:\n\u2022 Cuándo comenzó el problema\n\u2022 En qué juego estabas haciendo una compra\n\nUna vez toques en Enviar, se abrirá tu app de correo. ¡Puedes adjuntar una captura de pantalla o un vídeo sobre el problema!</string>
   <string name="uninstalled_title" comment="uninstalled">Desinstalado</string>
   <string name="error_no_internet_body" comment="please_check_your_internet_connection">Por favor, comprueba tu conexión a internet.</string>
   <string name="iap_appc_title" comment="pay_with_the_app_coins_wallet">Pagar con la AppCoins Wallet</string>
@@ -155,35 +139,31 @@
   <string name="iap_card_cvc" comment="cvc_cvv">CVC/CVV</string>
   <string name="iab_change_card_button" comment="change_card">Cambiar tarjeta</string>
   <string name="done_title" comment="done">¡Hecho!</string>
-  <string name="purchase_making_purchase_title" comment="making_purchase">Haciendo compra...</string>
-  <string name="manage_cards_error_details" comment="are_you_sure_your_card_details_are_correct_ple">¿Estás seguro de que los datos de tu tarjeta son correctos? Prueba de nuevo.</string>
-  <string name="log_out_button" comment="log_out">Cerrar sesión</string>
+  <string name="manage_cards_error_details" comment="are_you_sure_your_card_details_are_correct_ple">¿Estás seguro de que los datos de tu tarjeta son correctos? ¡Prueba de nuevo!</string>
   <string name="get_a_bonus_in_all_purchases_title">¡Recibirás un bonus en todas las compras!</string>
   <string name="iap_appc_body">¡Recibirás un bonus en todas las compras!</string>
-  <string name="iap_appc_wallet_install_success_title" comment="you_can_now_complete_your_purchase">Ahora puedes completar tu compra.</string>
+  <string name="iap_appc_wallet_install_success_title" comment="you_can_now_complete_your_purchase">Puedes continuar con tu compra.</string>
   <string name="iap_appc_wallet_install_success_body" comment="the_app_coins_wallet_is_now_installed">¡La AppCoins Wallet ahora está instalada!</string>
-  <string name="storage_access_permission_request_message">Permite el acceso al almacenamiento de tu teléfono para que podamos descargar e instalar esta aplicación.</string>
   <!-- Payment Errors-->
-  <string name="payments_error_not_enough_balance_body">¡No tienes suficiente saldo!</string>
+  <string name="payments_error_not_enough_balance_body">No tienes suficiente saldo</string>
   <string name="payments_error_old_card_title">¡Parece que registraste esta tarjeta hace mucho tiempo!</string>
-  <string name="payments_error_old_card_body">Introduce los datos de la tarjeta de nuevo o utiliza otra tarjeta.</string>
+  <string name="payments_error_old_card_body">Inserta los datos de la tarjeta de nuevo o usa una diferente.</string>
   <string name="purchase_error_payment_rejected">La transacción ha sido rechazada.</string>
-  <string name="purchase_error_try_other_card_body">Por favor, inténtalo con otra tarjeta o método de pago.</string>
+  <string name="purchase_error_try_other_card_body">Por favor, prueba con otra tarjeta o método de pago.</string>
   <string name="purchase_card_error_general_title">Hubo un problema con tu tarjeta.</string>
-  <string name="purchase_error_try_other_payment_method_body">Prueba con un método de pago diferente.</string>
-  <string name="purchase_card_error_no_funds">Parece que no tienes suficientes fondos o hay un límite en tu tarjeta.</string>
+  <string name="purchase_error_try_other_payment_method_body">Por favor, prueba con otro método de pago.</string>
+  <string name="purchase_card_error_no_funds">Parece que no tienes suficientes o fondos o que hay un límite en tu tarjeta.</string>
   <string name="purchase_card_error_invalid_details_title">Número de tarjeta no válido.</string>
   <string name="purchase_error_check_it_body">Por favor, compruébalo y prueba de nuevo.</string>
-  <string name="purchase_card_error_not_supported_title">Esta tarjeta todavía no está soportada.</string>
+  <string name="purchase_card_error_not_supported_title">Aún no aceptamos ese tipo de tarjeta.</string>
   <string name="purchase_error_wrong_pin_title">Hubo un problema con tu pin.</string>
-  <string name="purchase_error_3d_title">Hay un problema con la autenticación 3D.</string>
+  <string name="purchase_error_3d_title">Hubo un problema con la autenticación 3D.</string>
   <string name="purchase_card_rejected_title">La transacción ha sido rechazada por tu banco.</string>
   <string name="purchase_error_invalid_credit_card_title">Número de tarjeta no válido.</string>
-  <string name="purchase_error_invalid_credit_card_body">Asegúrate de que todos los números son correctos.</string>
+  <string name="purchase_error_invalid_credit_card_body">Asegúrate de que todos los dígitos son correctos.</string>
   <string name="purchase_error_card_security_validation_title">Hubo un error en la validación de segundo nivel de esta transacción.</string>
-  <string name="purchase_error_in_progress_title">Tu pedido ya ha sido realizado o está en progreso.</string>
-  <string name="purchase_card_error_CVV_title">CVV/CVC no válido</string>
-  <string name="purchase_error_expired_card_title">Parece que la tarjeta ha caducado.</string>
-  <string name="iap_already_processing_title">It seems this purchase is already being processed.</string>
-  <string name="iap_already_processing_body">This purchase may take a while, so, please hold on until completed or contact our Support Team.</string>
+  <string name="purchase_error_in_progress_title">Tu pedido ya fue procesado o está en proceso.</string>
+  <string name="purchase_card_error_CVV_title">CVV/CVC erróneo</string>
+  <string name="purchase_error_expired_card_title">Parece que tu tarjeta ha caducado.</string>
+  <string name="iap_already_processing_title">Parece que esta compra ya está siendo procesada.</string>
 </resources>
